# Surround360

./: CONTRIBUTING.md  README.md
surround360_camera_ctl/: .git_ignore  .hgignore  CMakeLists.txt  CONTRIBUTING.md  README.md
surround360_camera_ctl/configs/: ffserver.conf
surround360_camera_ctl/scripts/: setup.sh  usbreset.sh
surround360_camera_ctl/source/camera_control/: Camera.hpp  CameraControl.cpp  CameraControl.hpp  PointGrey.cpp  PointGrey.hpp  ProducerConsumer.h  README.txt  pc_test.cpp
surround360_camera_ctl/source/camera_control/test/: TestCameraNonVolatileStorage.cpp
surround360_camera_ctl/source/www/camera_capture/: README.txt  camProps_raw  camera_control.php  capture_image.php  check_errors.php  check_pid.php  delete_datasets.php  drop_cache.php  drop_cache.sh  enqueue_datasets.php  form_batch.php  index.php  kill_pid.sh  load_images.php  load_processing_params.php  preview_select.php  preview_update.php  record.php  show_stats.php  stop_capture.php  stop_pid.php  update_heartbeat.php
surround360_camera_ctl/source/www/camera_capture/config/: cmosis_sunex.json
surround360_camera_ctl/source/www/camera_capture/css/: all.css  customized-ui.css
surround360_camera_ctl/source/www/camera_capture/js/: slimbox2.js
surround360_camera_ctl2/: CMakeLists.txt  README.md
surround360_camera_ctl2/source/: AlignedAllocator.hpp  CameraController.cpp  CameraController.hpp  CameraDiscoverButton.cpp  CameraDiscoverButton.hpp  CameraListModel.hpp  CameraListView.cpp  CameraListView.hpp  CameraView.cpp  CameraView.hpp  Config.cpp  Config.hpp  FpsListModel.hpp  FramerateComboBox.cpp  FramerateComboBox.hpp  MainWindow.cpp  MainWindow.hpp  PointGrey.cpp  PointGrey.hpp  PreviewButton.cpp  PreviewButton.hpp  PreviewCamComboBox.cpp  PreviewCamComboBox.hpp  PreviewCamListModel.hpp  ProducerConsumer.h  RecordButton.cpp  RecordButton.hpp  RecordingDialog.hpp  Shaders.cpp  Shaders.hpp  ShutterComboBox.cpp  ShutterComboBox.hpp  ShutterListModel.hpp  StillButton.cpp  StillButton.hpp  frgshader2.glsl  frgshader3.glsl  main.cpp  vshader3.glsl
surround360_camera_ctl_ui/: CMakeLists.txt  LICENSE_camera_ctl_ui.md  README.md
surround360_camera_ctl_ui/source/: AlignedAllocator.hpp  Camera.hpp  CameraController.cpp  CameraController.hpp  CameraDiscoverButton.cpp  CameraDiscoverButton.hpp  CameraListModel.hpp  CameraListView.cpp  CameraListView.hpp  CameraView.cpp  CameraView.hpp  Config.cpp  Config.hpp  FpsListModel.hpp  FramerateComboBox.cpp  FramerateComboBox.hpp  GainComboBox.cpp  GainComboBox.hpp  GainListModel.hpp  MainWindow.cpp  MainWindow.hpp  PointGrey.cpp  PointGrey.hpp  PreviewButton.cpp  PreviewButton.hpp  PreviewCamComboBox.cpp  PreviewCamComboBox.hpp  PreviewCamListModel.hpp  ProducerConsumer.h  RecordButton.cpp  RecordButton.hpp  Shaders.cpp  Shaders.hpp  ShutterComboBox.cpp  ShutterComboBox.hpp  ShutterListModel.hpp  StillButton.cpp  StillButton.hpp  main.cpp  rotations.txt
surround360_design/: CONTRIBUTING.md  LICENSE_design.md  README.md
surround360_design/3d_models/STEP_files/: 160523_3.STEP  FB360_V1_21.STEP  FB360_V1_22.STEP  FB360_V1_23.STEP  FB360_V1_24.STEP  FB360_V1_25.STEP  FB360_V1_26.STEP  FB360_V1_27.STEP  FB360_V1_28.STEP  FB360_V1_31.STEP  FB360_V1_32.STEP  FB360_V1_33.STEP
surround360_render/: .gitignore  .hgignore  CALIBRATION.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  LICENSE_render.md  PATENTS.md  README.md  RENDER.md  RIG_JSON.md
surround360_render/cmake/Hunter/: config.cmake
surround360_render/res/config/: 17cmosis_default.json  17cmosis_rig.json  camera_rig.json  intrinsics.xml
surround360_render/res/config/isp/: README.txt  cam_to_isp_config.json  cmosis_fujinon.json  cmosis_sunex.json  cmosis_sunex_passthrough.json  passthrough.json
surround360_render/scripts/: arrange_dataset.py  batch_process_isp.py  batch_process_video.py  color_calibrate_all.py  geometric_calibration.py  make_single_cam_vid.py  preview.py  run_all.py  scanner_process_video.py  vignetting_calibrate.py
surround360_render/source/calibration/: ColorCalibration.cpp  ColorCalibration.h  GeometricCalibration.cpp  GeometricCalibration.h  IntrinsicCalibration.cpp  IntrinsicCalibration.h  KeypointMatchers.cpp  KeypointMatchers.h  RingRectification.cpp  RingRectification.h
surround360_render/source/camera_isp/: BinaryFootageFile.cpp  BinaryFootageFile.h  BinaryFootageFile.hpp  CameraIsp.h  CameraIspGen.cpp  CameraIspPipe.h  ColorspaceConversion.h  DngTags.h  NewUnpacker.cpp  Raw12Converter.cpp  Raw12Converter.hpp  Raw2Rgb.cpp  RawConverter.cpp  RawConverter.h  SphericalPatch.h  UnpackImageBundle.cpp  Unpacker.cpp
surround360_render/source/optical_flow/: NovelView.cpp  NovelView.h  OpticalFlowFactory.h  OpticalFlowInterface.h  OpticalFlowVisualization.cpp  OpticalFlowVisualization.h  PixFlow.h
surround360_render/source/render/: Camera.cpp  Camera.h  CameraMetadata.cpp  CameraMetadata.h  ColorAdjustmentSampleLogger.h  ImageWarper.cpp  ImageWarper.h  PoleRemoval.cpp  PoleRemoval.h  RigDescription.cpp  RigDescription.h  SideCameraBrightnessAdjustment.h
surround360_render/source/scanner_kernels/: concat_panorama_chunks_kernel_cpu.cpp  project_spherical_kernel_cpu.cpp  render_stereo_panorama_chunk_kernel_cpu.cpp  surround360.proto  temporal_optical_flow_kernel_cpu.cpp
surround360_render/source/test/: TestColorCalibration.cpp  TestExtractAlphaChannel.cpp  TestHyperPreview.cpp  TestImageWarper.cpp  TestIntrinsicCalibration.cpp  TestJson.cpp  TestLogger.cpp  TestOpticalCenterVisualization.cpp  TestOpticalFlow.cpp  TestPoleRemoval.cpp  TestRenderStereoPanorama.cpp  TestRenderWithoutSides.cpp  TestRingRectification.cpp  TestVignettingCalibration.cpp  TestVignettingDataAcquisition.cpp
surround360_render/source/util/: CvUtil.cpp  CvUtil.h  Filter.h  JsonUtil.cpp  JsonUtil.h  LinearRegression.h  MathUtil.h  MonotonicTable.h  StringUtil.cpp  StringUtil.h  SystemUtil.cpp  SystemUtil.h  VrCamException.h
